[package]
name = "holidays-jp-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.10.0", features = ["attributes"]}
chrono = "0.4.19"
clap = "=3.0.0-beta.2"
serde = "1.0.130"
serde_derive = "1.0.130"
surf = "2.3.2"

